# 6kconfig_demo

./: .gitignore  .gitmodules  CMakeLists.txt  prj.conf
src/: main.c
